--- a/medical-equipments/healthcare_it/Model_K+.html
+++ b/medical-equipments/healthcare_it/Model_K+.html
@@ -171,11 +171,12 @@
             <h3 class="mb-3 fw-bold text-color_bk80">Specifications</h3>
           </div>
           <div class="col-12 col-md-10 mx-auto mb-2">
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-dash"></i>Cabinet<i class="bi bi-dash"></i></h4>
             <table class="table table-striped table-hover">
               <tbody>
-                <tr>
+                <!-- <tr>
                   <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
-                </tr>
+                </tr> -->
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Dimensions(w/o accessory)</th>
                   <td class="p-color-bk80" style="color: #595857;">L640mm±30mm x W560mm±30mm x H1040mm±30mm</td>
