--- a/medical-equipments/healthcare_it/Model_K+.html
+++ b/medical-equipments/healthcare_it/Model_K+.html
@@ -141,42 +141,23 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Cabinet</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">Model K+</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">90 lbs</td>
                 </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Specifications</h3>
-          </div>
-          <div class="col-12 col-md-10 mx-auto mb-2">
-            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-dash"></i>Cabinet<i class="bi bi-dash"></i></h4>
-            <table class="table table-striped table-hover">
-              <tbody>
-                <!-- <tr>
-                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
-                </tr> -->
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Dimensions(w/o accessory)</th>
                   <td class="p-color-bk80" style="color: #595857;">L640mm±30mm x W560mm±30mm x H1040mm±30mm</td>
@@ -201,9 +182,11 @@
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Cart handle</th>
                   <td class="p-color-bk80" style="color: #595857;">Make user easily to move cabinet</td>
                 </tr>
-                <tr>
-                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Drawer</td>
-                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Drawer</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Locking system</th>
                   <td class="p-color-bk80" style="color: #595857;">
@@ -225,16 +208,20 @@
                     (5) 5th drawer : STD 3" x 14"x 16"
                   </td>
                 </tr>
-                <tr>
-                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Swivel casters</td>
-                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Swivel casters</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster feature</th>
                   <td class="p-color-bk80" style="color: #595857;">5" diameter swivel casters which design protects axle/bearing areas from hair</td>
                 </tr>
-                <tr>
-                  <td colspan="2" class=" fw-bold fs-5" style="color: #294076">Accessory</td>
-                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Accessory</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Medical trash cans</th>
                   <td class="p-color-bk80" style="color: #595857;">1pcs for general waste, the other one for infection waste</td>
