--- a/medical-equipments/healthcare_it/op-cnh01-hg.html
+++ b/medical-equipments/healthcare_it/op-cnh01-hg.html
@@ -139,34 +139,203 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Complete System</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">OP-CNH01-HG</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">35.0 lbs</td>
                 </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Overall Load Capacity</th>
+                  <td class="p-color-bk80" style="color: #595857;">33lbs. (15kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Net Weight</th>
+                  <td class="p-color-bk80" style="color: #595857;">68.3lbs. (31kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Packaged Dimensions</th>
+                  <td class="p-color-bk80" style="color: #595857;">31.5”W x 25.2”D x 57.9” H (800 x 640 x 1450mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Accessory Compatible</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Display System</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
                 <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
                 </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hinge Module Swivel</th>
+                  <td class="p-color-bk80" style="color: #595857;">N/A</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hinge Tilt</th>
+                  <td class="p-color-bk80" style="color: #595857;">-5°(down) ~ +25°(up)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hing Pivot</th>
+                  <td class="p-color-bk80" style="color: #595857;">360°</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">User Torque Adjust</th>
+                  <td class="p-color-bk80" style="color: #595857;">Available</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Display Mounting Pattern</th>
+                  <td class="p-color-bk80" style="color: #595857;">100 x 100mm 75 x 75mm</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Display Support Type</th>
+                  <td class="p-color-bk80" style="color: #595857;">Single Monitor</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Panel Size Support</th>
+                  <td class="p-color-bk80" style="color: #595857;">≤24” Monitor</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Max Weight Load</th>
+                  <td class="p-color-bk80" style="color: #595857;">17.6lbs (8kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height Adjust Range</th>
+                  <td class="p-color-bk80" style="color: #595857;">5.12” (130mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height Tension Torque</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Cable Management</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Working Space</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Desk</th>
+                  <td class="p-color-bk80" style="color: #595857;">Open Workspace</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Dimensions</th>
+                  <td class="p-color-bk80" style="color: #595857;">20.35” x 10.28” (571 x 261mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Max Load</th>
+                  <td class="p-color-bk80" style="color: #595857;">16.5lbs (7.5kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Skidproof at Edge</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Rear Handle</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Storage & Inputs</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Compartment Dimensions</th>
+                  <td class="p-color-bk80" style="color: #595857;">16.73” W x 12.8” D x 3.54” H (425 x 325 x 90mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Key Lock</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Keyboard Tray Dimensions</th>
+                  <td class="p-color-bk80" style="color: #595857;">17.68” x 8.15” (449 x 207mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Keyboard Height</th>
+                  <td class="p-color-bk80" style="color: #595857;">1.63” *(41.5mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Tilt</th>
+                  <td class="p-color-bk80" style="color: #595857;">Max 12°(backward)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Display Support Type</th>
+                  <td class="p-color-bk80" style="color: #595857;">Single Monitor</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Panel Size Support</th>
+                  <td class="p-color-bk80" style="color: #595857;">≤24” Monitor</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Max Weight Load</th>
+                  <td class="p-color-bk80" style="color: #595857;">17.6lbs (8kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height Adjust Range</th>
+                  <td class="p-color-bk80" style="color: #595857;">5.12” (130mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height Tension Torque</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Cable Management</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Base System</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster</th>
+                  <td class="p-color-bk80" style="color: #595857;">4 Wheels, Low Noise</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster Locking Brake</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes, On Two Front Wheels</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Main Lift Handle</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height Adjust Range</th>
+                  <td class="p-color-bk80" style="color: #595857;">19.7” (500mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Main Lift Tension Adjust</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes, Make Sure to Lock Display & Main Lift Before Moving</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">RoHs Compliant</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
               </tbody>
             </table>
           </div>
