--- a/medical-equipments/healthcare_it/op-ack030-hg.html
+++ b/medical-equipments/healthcare_it/op-ack030-hg.html
@@ -139,34 +139,43 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Complete System</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">OP-ACK030-HG</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">12.0 lbs</td>
                 </tr>
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Net Weight</th>
+                  <td class="p-color-bk80" style="color: #595857;">11.44 lbs. (5.2 kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Dimension (W*H*D)</th>
+                  <td class="p-color-bk80" style="color: #595857;">34.82” x 25.4” x 3.98” (884.3 x 645 x 101 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Steel / Plastic</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Support Max. Weight</th>
+                  <td class="p-color-bk80" style="color: #595857;">3.3 lbs. (1.5kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Max. Working Space</th>
+                  <td class="p-color-bk80" style="color: #595857;">17.68” x 9.65” (449 x 245 mm)</td>
+                </tr>
               </tbody>
             </table>
           </div>
