--- a/medical-equipments/healthcare_it/op-alr20l-hg.html
+++ b/medical-equipments/healthcare_it/op-alr20l-hg.html
@@ -139,34 +139,103 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Complete System</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">OP-ALR20L-HG</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">40.0 lbs</td>
                 </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Net Weight</th>
+                  <td class="p-color-bk80" style="color: #595857;">39.2 lbs. (17.7 kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Dimension (W*H*D)</th>
+                  <td class="p-color-bk80" style="color: #595857;">9.84” x 105.24“ x 59.21” (250 x 267 x 1504 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Screw Type</th>
+                  <td class="p-color-bk80" style="color: #595857;">M4</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Steel / Aluminum Alooy / Plastic</td>
+                </tr>
+              </tbody>
+            </table>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Display System</h4>
+            <table class="table table-striped table-hover table-borderless">
+              <tbody>
                 <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
                 </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hinge Module Swivel</th>
+                  <td class="p-color-bk80" style="color: #595857;">+/-185°</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hinge Tilt</th>
+                  <td class="p-color-bk80" style="color: #595857;">-60° ~ +20°</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hinge User Torque Adjust</th>
+                  <td class="p-color-bk80" style="color: #595857;">Available</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Display Mount Pattern</th>
+                  <td class="p-color-bk80" style="color: #595857;">100 x 100 / 75 x 75mm</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Display Type</th>
+                  <td class="p-color-bk80" style="color: #595857;">Single Monitor</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Panel Size Support</th>
+                  <td class="p-color-bk80" style="color: #595857;">15” ~ 24”</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Support Weight (Range)</th>
+                  <td class="p-color-bk80" style="color: #595857;">13.23 ~ 26.46 lbs. (6 ~ 12 kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Arm Swivel 1</th>
+                  <td class="p-color-bk80" style="color: #595857;">+/-90°</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Arm Swivel 2</th>
+                  <td class="p-color-bk80" style="color: #595857;">+/-185°</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Arm Height Adjustment</th>
+                  <td class="p-color-bk80" style="color: #595857;">26.42” (671 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Tension Torque Adjust</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Tilt (Arm)</th>
+                  <td class="p-color-bk80" style="color: #595857;">-55°(down) ~ +25°(up)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Extended Arm Provided</th>
+                  <td class="p-color-bk80" style="color: #595857;">2</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Cable Management</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
               </tbody>
             </table>
           </div>
