--- a/medical-equipments/healthcare_it/op-ec-002mri-be.html
+++ b/medical-equipments/healthcare_it/op-ec-002mri-be.html
@@ -141,34 +141,51 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Complete System</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">OP-EC-002MRI-BE</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">45.0 lbs</td>
                 </tr>
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height</th>
+                  <td class="p-color-bk80" style="color: #595857;">47.7” (1212 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Dimension</th>
+                  <td class="p-color-bk80" style="color: #595857;">22.7” x 18.8“ (577 mm x 478 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Shelf Dimension</th>
+                  <td class="p-color-bk80" style="color: #595857;">12.5” x 17.7” (320 mm x 450 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster</th>
+                  <td class="p-color-bk80" style="color: #595857;">4” Twin Casters (Two Brakes in Front)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Powder Coated Aluminum</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Shelf Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Anodized Aluminum</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Anodized Aluminum</td>
+                </tr>
               </tbody>
             </table>
           </div>
