--- a/medical-equipments/healthcare_it/op-acb100-hg.html
+++ b/medical-equipments/healthcare_it/op-acb100-hg.html
@@ -139,34 +139,51 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Main Specifications</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">OP-ACB100-HG</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">9.0 lbs</td>
                 </tr>
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Net Weight</th>
+                  <td class="p-color-bk80" style="color: #595857;">8.18lbs (3.71kg)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Outer Dimension (WxHxD)</th>
+                  <td class="p-color-bk80" style="color: #595857;">16.77” x 4.25” x 16.35” (426 x 108 x 414.4mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Inner Dimension (WxHxD)</th>
+                  <td class="p-color-bk80" style="color: #595857;">15.71” x 2.75” x 11.53” (399x 70 x 298mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Screw Type</th>
+                  <td class="p-color-bk80" style="color: #595857;">M4</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Steel / Aluminum Alloy / Plastic</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Lock</th>
+                  <td class="p-color-bk80" style="color: #595857;">Yes</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Maximum Weight Support</th>
+                  <td class="p-color-bk80" style="color: #595857;">4.41lbs (2kg)</td>
+                </tr>
               </tbody>
             </table>
           </div>
