--- a/medical-equipments/healthcare_it/op-ivs5-007-be.html
+++ b/medical-equipments/healthcare_it/op-ivs5-007-be.html
@@ -151,7 +151,7 @@
                 </tr> -->
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
-                  <td class="p-color-bk80" style="color: #595857;">OP-IVS6-007-BE</td>
+                  <td class="p-color-bk80" style="color: #595857;">OP-IVS5-007-BE</td>
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
@@ -159,11 +159,11 @@
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height</th>
-                  <td class="p-color-bk80" style="color: #595857;">51.5” ~ 89.4” (1308 ~ 2270 mm)</td>
+                  <td class="p-color-bk80" style="color: #595857;">50” ~ 83.8” (1269 ~ 2129 mm)</td>
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Dimension</th>
-                  <td class="p-color-bk80" style="color: #595857;">22” (558.8 mm) with 6 Legs</td>
+                  <td class="p-color-bk80" style="color: #595857;">24” With 5 Legs</td>
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster Dimension</th>
@@ -171,7 +171,7 @@
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole Top / Bottom</th>
-                  <td class="p-color-bk80" style="color: #595857;">Ø 7/8” (22.22 mm) / Ø 1-1/4” (31.75 mm)</td>
+                  <td class="p-color-bk80" style="color: #595857;">Ø 7/10” (18 mm) / Ø 1” (25.2 mm)</td>
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hook</th>
@@ -179,11 +179,11 @@
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Material</th>
-                  <td class="p-color-bk80" style="color: #595857;">Cast Iron</td>
+                  <td class="p-color-bk80" style="color: #595857;">Powder-coated Aluminum</td>
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole / Hook Material</th>
-                  <td class="p-color-bk80" style="color: #595857;">Chrome Plated Steel</td>
+                  <td class="p-color-bk80" style="color: #595857;">Stainless Steel</td>
                 </tr>
               </tbody>
             </table>
