--- a/medical-equipments/healthcare_it/op-ivs5-012-be.html
+++ b/medical-equipments/healthcare_it/op-ivs5-012-be.html
@@ -141,34 +141,59 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Complete System</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">OP-IVS5-012-BE</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">30 lbs</td>
                 </tr>
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height</th>
+                  <td class="p-color-bk80" style="color: #595857;">53.3” ~ 87.1” (1354 ~ 2214 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Dimension</th>
+                  <td class="p-color-bk80" style="color: #595857;">Ø 20” (508 mm) with 5 Legs</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster Dimension</th>
+                  <td class="p-color-bk80" style="color: #595857;">3” Twin Casters (Two Brakes in Front)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole Top / Bottom</th>
+                  <td class="p-color-bk80" style="color: #595857;">Ø 7/10” (18 mm) / Ø 1” (25.2 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hook</th>
+                  <td class="p-color-bk80" style="color: #595857;">4 Hooks</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Stackable Base Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Cast Iron</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole / Hook Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Stainless Steel</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Load Capacity - Hook</th>
+                  <td class="p-color-bk80" style="color: #595857;">4.4 lbs. / 2 kg Per Hook</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Item Net Weight</th>
+                  <td class="p-color-bk80" style="color: #595857;">20.94 lbs (9.5 kg)</td>
+                </tr>
               </tbody>
             </table>
           </div>
