--- a/medical-equipments/healthcare_it/op-ivs5-005mri-be.html
+++ b/medical-equipments/healthcare_it/op-ivs5-005mri-be.html
@@ -179,7 +179,7 @@
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Material</th>
-                  <td class="p-color-bk80" style="color: #595857;">Powder-coated Aluminum/td></td>
+                  <td class="p-color-bk80" style="color: #595857;">Powder-coated Aluminum</td>
                 </tr>
                 <tr>
                   <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole Material</th>
