--- a/medical-equipments/healthcare_it/op-ivs6-007-be.html
+++ b/medical-equipments/healthcare_it/op-ivs6-007-be.html
@@ -144,7 +144,7 @@
             <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Main Specifications</h4>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Complete System</h4>
             <table class="table table-striped table-hover table-borderless">
               <tbody>
                 <!-- <tr>
