--- a/medical-equipments.html
+++ b/medical-equipments.html
@@ -145,7 +145,7 @@
           </div>
           <div class="col-6 col-sm-3">
             <div class="card mb-3 h-100 border-0">
-              <img src="./images/medical-equipments/Patient_Analytics_Solutions/Rapid_Patient_Analyzer-01.jpg" class="card-img-top" alt="..." />
+              <img src="http://medalliance.com.tw/images/medical-equipments/medical_devices_and_equipments/patient_analytics_solutions/Rapid_Patient_Analyzer-01.jpg" class="card-img-top" alt="..." />
               <div class="card-body text-center">
                 <h5 class="card-title text-center fs-6 h-color-bk80">Rapid Patient Analyzer</h5>
               </div>
