--- a/medical-equipments/healthcare_it/mobile_nursing_station/OP-UC-001-BE.html
+++ b/medical-equipments/healthcare_it/mobile_nursing_station/OP-UC-001-BE.html
@@ -29,14 +29,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../../custom/all.css" />
-    <link rel="stylesheet" href="../../custom/equipments.css" />
+    <link rel="stylesheet" href="http://medalliance.com.tw/custom/all.css" />
+    <link rel="stylesheet" href="http://medalliance.com.tw/custom/equipments.css" />
   </head>
 
   <body>
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 2">
-      <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="../../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
+      <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="http://medalliance.com.tw/images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -198,7 +198,7 @@
       <div class="container-xxl">
         <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center border-bottom border-secondary p-3">
           <div class="mb-3 mb-lg-0 me-lg-3">
-            <img src="../../images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
+            <img src="http://medalliance.com.tw/images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
           </div>
           <div class="d-flex flex-column">
             <div class="d-flex flex-column flex-lg-row">
