--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
     <!-- hero↑ -->
 
     <!-- content↓ -->
-    <div class="container-fluid" style="margin-bottom: 60px;">
-      <h2 class="text-center my-5">醫療AI電腦應用範疇</h2>
-      <div class="row ">
-        <div class="col-6 d-flex justify-content-end">
-          <img src="./images/section01Pic.png" alt="" />
+    <p class="text-center my-5 fs-3 fw-bolder">醫療AI電腦應用範疇</p>
+    <div class="container-xxl" style="margin-bottom: 42px;">
+      <p class="fs-4 fw-bold text-center">多模態數據精準醫療</p>
+      <p class="fs-5 text-center">從多模態資料集產生臨床上可行的資訊，讓臨床醫生和研究人員因此能為病患提供個人化的治療方法。</p>
+      <div class="row align-items-center">
+        <div class="col-4">
+          <img src="./images/section01Pic.png" class="float-end" alt="" />
         </div>
-        <div class="col-6">
-          <p>多模態數據精準醫療</p>
-          <p>從多模態資料集產生臨床上可行的資訊，讓臨床醫生和研究人員因此能為病患提供個人化的治療方法。</p>
-          <div class="swiper swiperTest1 " style="width: 100%;">
+        <div class="col-8">
+          <div class="swiper swiperTest1 ">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="height: 100%;">
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
                 <div class="card">
                   <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -121,7 +121,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
                 <div class="card">
                   <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -131,7 +131,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
                 <div class="card">
                   <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -141,7 +141,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
                 <div class="card">
                   <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -157,6 +157,123 @@
         </div>
       </div>
     </div>
+
+    <div class="container-fluid" style="background-color: #F8F8F8;padding: 42px 0;">
+      <div class="container-xxl">
+        <p class="text-end fs-4 fw-bold text-center">健康智慧虛擬助理</p>
+        <p class="text-end fs-5 text-center">為病患提供與其疾病相關的醫療保健資訊、提醒病患按時服藥與運動，以及電子健康紀錄系統串連。</p>
+        <div class="row flex-row-reverse align-items-center">
+          <div class="col-4">
+            <img src="./images/section02Pic.png" class="float-start" alt="" />
+          </div>
+          <div class="col-8">
+            <div class="swiper swiperTest1 ">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                  <div class="card">
+                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                  <div class="card">
+                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                  <div class="card">
+                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                  <div class="card">
+                    <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-xxl" style="padding: 42px 0;">
+      <p class="fs-4 fw-bold  text-center">自主預測性發展</p>
+      <p class="fs-5 text-center">AI結合之健康照護系統將能預測個人疾病風險發生並提供預防建議。</p>
+      <div class="row align-items-center">
+        <div class="col-4">
+          <img src="./images/section03Pic.png" class="float-end" alt="" />
+        </div>
+        <div class="col-8">
+          <div class="swiper swiperTest1 ">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                <div class="card">
+                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                <div class="card">
+                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                <div class="card">
+                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide" style="height: 100%;width: 25rem;padding: 0.5rem;">
+                <div class="card">
+                  <img src="./images/1710390955132.jpg"" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- content↑ -->
     <!-- footer↓  -->
     <footer class="container-fluid" style="background-color: #e9e9e9; padding-top: 80px; padding-bottom: 40px">
